# Voice-Recorder-App

./: .gitignore  README.md  main.py  pyproject.toml
