[tool.poetry]
name = "voice-recorder-app"
version = "0.1.0"
description = ""
authors = ["udolev <udolev@yatmal.co.il>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
PyAudio = "^0.2.13"
pyinstaller = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
